# brodata

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
brodata/: __init__.py  bhr.py  bhrgt.py  bhrp.py  bro.py  cpt.py  dino.py  epc.py  frd.py  gar.py  gld.py  gm.py  gmn.py  gmw.py  gpd.py  guf.py  plot.py  sfr.py  util.py  webservices.py
docs/: conf.py  examples.rst  index.rst  modules.rst  package.rst
docs/examples/: 11_bro_gmw.ipynb  12_bro_gld.ipynb  13_bro_bhr.ipynb  14_bro_cpt.ipynb  15_bro_gar.ipynb  21_dino.ipynb  31_files.ipynb  filter_drillings.py  run_all_notebooks.py
docs/package/: 00_setup.ipynb
tests/: test_bro.py  test_dino.py  test_util.py
tests/data/: B38B0079_qua.csv  B38B0207_001_full.csv  B38B2152.csv  B38B2152.gef  BHR000000175723.xml  BHR000000353924.xml  CPT000000005925.xml  CPT000000115243.xml  GAR000000019636.csv  GAR000000019636.xml  GAR000000042563.csv  GAR000000042563.xml  GLD000000012893_full.csv  GLD000000012893_series.csv  GMN000000000163.xml  GMW000000036287.xml  GUF000000016723.xml  P38G0010_full.csv  SFR000000000243.xml  W38B0016.csv  W38B0022.csv  W38D0010.csv
