[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brodata"
version = "0.0.1"
authors = [
  { name="Ruben Calje", email="r.calje@artesia-water.nl" },
]
description = "A Python-package to download and process subsurface data from DINO and BRO"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ArtesiaWater/brodata"
Issues = "https://github.com/ArtesiaWater/brodata/issues"
