[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brodata"
version = "0.0.2"
authors = [{ name = "Ruben Calje", email = "r.calje@artesia-water.nl" }]
description = "A Python-package to download and process subsurface data from DINO and BRO"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["pandas", "geopandas", "owslib", "requests", "lxml", "pyproj", "tqdm"]

[project.urls]
homepage = "https://github.com/ArtesiaWater/brodata"
issues = "https://github.com/ArtesiaWater/brodata/issues"

[project.optional-dependencies]
ci = ["pytest"]
